--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^5.3.3
   fluttertoast: ^8.2.8
   google_fonts: ^6.2.1
+  cloud_firestore: ^5.5.0
 
 dev_dependencies:
   flutter_test:
